<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connect_button"
        app:layout_constraintTop_toBottomOf="@id/scan_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/check_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/check_battery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_button" />

    <TextView
        android:id="@+id/battery_readout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/battery_readout"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/check_battery"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/check_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/check_temperature"
        app:layout_constraintStart_toStartOf="@+id/check_battery"
        app:layout_constraintTop_toBottomOf="@+id/check_battery" />

    <TextView
        android:id="@+id/temperature_readout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/temperature_readout"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/check_temperature"
        app:layout_constraintEnd_toEndOf="parent" />



    <Button
        android:id="@+id/calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibrate"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_temperature" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/rtm_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_rtm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrate" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/log_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rtm_switch" />

    <Button
        android:id="@+id/bulk_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bulk_transfer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_switch" />


</androidx.constraintlayout.widget.ConstraintLayout>