<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">


    <Button
        android:id="@+id/battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_battery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/battery" />

    <Button
        android:id="@+id/calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/rtm_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_rtm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calibrate" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/log_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rtm_switch" />

    <Button
        android:id="@+id/bulk_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bulk_transfer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_switch"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>